add counting decpomdp